--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+    		<version>2.16.1</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
